<resources>
    <string name="app_name">Health Assistant</string>
    <string name="enter_phone">请输入注册的手机号</string>
    <string name="enter_password">请输入密码</string>
    <string name="text_remenber_pass">记住密码</string>
    <string name="text_login">登录</string>
    <string name="text_registered">注册</string>
    <string name="text_forget_password">忘记密码</string>
    <string name="text_now_login">正在登陆</string>
    <string name="text_registering">正在注册</string>
    <string name="text_user_name">请输入姓名</string>
    <string name="text_age">请输入年龄</string>
    <string name="text_id_num">请输入身份证号</string>
    <string name="text_male">男</string>
    <string name="text_female">女</string>
    <string name="text_password">请输入密码</string>
    <string name="text_password_again">请再次输入密码</string>
    <string name="text_phone_number">请输入手机号</string>
    <string name="text_username">请输入用户名</string>
    <string name="register_completed">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="twice_different">两次密码不一致</string>
    <string name="txt_cannot_null">输入框不能为空</string>
    <string name="text_get_verify">获取验证码</string>
    <string name="text_enter_verify">请输入验证码</string>
    <string name="sms_sent">验证码发送成功</string>
    <string name="sms_send_fail">验证码发送失败</string>
    <string name="please_enter_phone">请输入手机号</string>
    <string name="verify_fail">验证码错误</string>
    <string name="not_verify">该账号手机未验证，请验证！</string>
    <string name="login_fail">登录失败</string>
    <string name="text_address">请输入家庭住址</string>
    <string name="login_success">登录成功！</string>
    <string name="pass_wrong">密码错误！</string>
    <string name="not_exist">账号不存在</string>
    <string name="text_fam_name">家庭名称：</string>
    <string name="text_add_member">添加成员</string>
    <string name="text_del_member">删除成员</string>
    <string name="text_edit_member">修改成员</string>
    <string name="fm_edit">修改</string>
    <string name="fm_del">删除</string>
    <string name="text_member_name">家庭成员：</string>
    <string name="text_member_age">年龄：</string>
    <string name="text_member_sex">性别：</string>
    <string name="text_member_id_card">身份号：</string>
    <string name="text_member_phone">电话：</string>
    <string name="text_member_address">住址：</string>
    <string name="member_edit">修改</string>
    <string name="member_del">删除</string>
    <string name="case_time">时间</string>
    <string name="part_name">部门</string>
    <string name="type_name">种类</string>
    <string name="case_user_name">姓名：</string>
    <string name="case_date">时间：</string>
    <string name="case_hos_name">部门：</string>
    <string name="case_type_name">种类：</string>
    <string name="case_desc">病例描述：</string>
    <string name="fam_mem_save">保存</string>
    <string name="create_fam">创建家庭</string>
    <string name="fm_name">家庭名称：</string>
    <string name="submit">确定</string>
    <string name="fm_phone">成员手机号：</string>
    <string name="fm_pass">该成员密码：</string>
    <string name="goback">返回</string>
    <string name="old_pass">旧密码：</string>
    <string name="new_pass">新密码：</string>
    <string-array name="main_list">
        <item>我要提问</item>
        <item>我的问题</item>
        <item>我要预约</item>
        <item>我的预约</item>
        <item>其他（暂无）</item>
    </string-array>
    <string-array name="type_list">
        <item>耳鼻喉科</item>
        <item>肝功能检查</item>
    </string-array>
</resources>
